estilos del menu hamburguesa

--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,117 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   border: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.header {
+  width: 100%;
+  height: 5rem;
+  position: fixed;
+  top: 0;
+  padding: 1.375rem 6.25rem;
+}
+
+.header img {
+  float: left;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.header .nav {
+  float: right;
+}
+
+.header .nav .menu ul {
+  width: 100%;
+  position: absolute;
+  top: 1.625rem;
+  right: 0;
+  overflow: hidden;
+  list-style: none;
+  background: #0000EC;
+  height: 0px;
+  -webkit-transition: height 0.5s ease;
+  transition: height 0.5s ease;
+}
+
+.header .nav .menu ul li a {
+  position: relative;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-family: 'IBM Plex Mono', monospace;
+  padding: 1rem 5%;
+  line-height: 28px;
+  display: block;
+}
+
+.header .nav .menu {
+  padding-top: 0.1875rem;
+}
+
+.header .nav .menu input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  opacity: 0;
+  z-index: 2;
+  position: absolute;
+  /*animación del menu que se desplega*/
+  /*movimiento a cruz*/
+}
+
+.header .nav .menu input[type="checkbox"]:checked ~ ul {
+  height: 14rem;
+  transition: height 0.5s ease-in-out;
+  -moz-transition: height 0.5s ease-in-out;
+  -o-transition: height 0.5s ease-in-out;
+  -webkit-transition: height 0.5s ease-in-out;
+}
+
+.header .nav .menu input:checked ~ span {
+  opacity: 1;
+  -webkit-transform: rotate(45deg) translate(2px, 1px);
+          transform: rotate(45deg) translate(2px, 1px);
+}
+
+.header .nav .menu input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+          transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.header .nav .menu input:checked ~ span:nth-last-child(2) {
+  -webkit-transform: rotate(-45deg) translate(1px, 0px);
+          transform: rotate(-45deg) translate(1px, 0px);
+}
+
+/*span -lineas del menu hamburguesa-*/
+.header .nav .menu span {
+  display: block;
+  width: 1.5625rem;
+  height: 0.1563rem;
+  margin-bottom: 0.4063rem;
+  position: relative;
+  background: #060A24;
+  z-index: 1;
+  -webkit-transform-origin: 0.1875rem 0rem;
+          transform-origin: 0.1875rem 0rem;
+  -webkit-transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
+  transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease, opacity 0.55s ease;
+  transition: transform 0.5s ease, opacity 0.55s ease, -webkit-transform 0.5s ease;
+}
+
+.header .nav .menu span:first-child {
+  -webkit-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
+}
+
+.header .nav .menu span:nth-last-child(2) {
+  -webkit-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
 }
 /*# sourceMappingURL=style.css.map */
