--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,7 +1,7 @@
 .main {
-    h3 {
+    .h3-section-1 {
         font-family: 'IBM Plex Sans', sans-serif;
-        font-size: 40px;
+        font-size: 2.5rem;
         color: $text-color-1;
         margin-top: 6.25rem;
         margin-bottom: 1rem;
@@ -17,13 +17,43 @@
 
         .episode {            
             overflow: hidden;
-            height: 210px;
-            width: 400px;
+            height: 13.125rem;
+            width: 25rem;
             iframe {
                 
                 overflow: hidden;
             }
         }
-    }   
+    }
+    
+    .section-2 {
+        display: flex;
+        align-content: center;
+        align-items: center;
+        
+        img {
+            height: 600px;
+            width: auto;
+        }
+
+        .text {
+            height: 200px;
+            width: 460px;
+            .h3-section-2 {
+                font-family: 'IBM Plex Sans', sans-serif;
+                font-size: 2.5rem;
+                margin-bottom: 1rem;
+            }
+            
+            p {
+                line-height: 24px;
+                font-family: 'IBM Plex Mono', monospace;
+                margin-bottom: 1rem;
+            }
+
+        }
+
+        
+    }
     
 }
