--- a/style/style.css
+++ b/style/style.css
@@ -275,4 +275,25 @@
   font-family: 'IBM Plex Mono', monospace;
   margin-bottom: 1rem;
 }
+
+.main .section-3 h3 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin-left: 6.25rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+.main .section-3 .galery-images {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+}
+
+.main .section-3 .galery-images img {
+  width: 100%;
+  height: auto;
+}
 /*# sourceMappingURL=style.css.map */
