aplicados estilos version desktop a seccion algunos de nuestros temas

--- a/style/_title.scss
+++ b/style/_title.scss
@@ -43,6 +43,7 @@
             color: $text-color-1;
             text-decoration: none;
             font-family: 'IBM Plex Mono', monospace;
+            font-weight: bold;
             text-align: center;
             
         }
