--- a/style/_main.scss
+++ b/style/_main.scss
@@ -69,6 +69,38 @@
                 width: 100%;
                 height: auto;
             }            
+        }        
+    }
+
+    .section-4 {
+        margin-top: 2.5rem;
+        margin-bottom: 2.125rem;
+        h3 {
+            font-family: 'IBM Plex Sans', sans-serif;
+            margin-left: 6.25rem;
+            margin-bottom: 3rem;
+            font-size: 28px;
+        }
+        .images-section-4 {
+            display: flex;
+            justify-content: space-around;            
+            align-content: center;
+            
+            .img {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                img {
+                    height: 80px;
+                    width: 80px;
+                }
+                p {
+                    font-family: 'IBM Plex Sans', sans-serif;
+                    font-weight: bold;
+                    font-size: 1rem;
+                    
+                }
+            }                        
         }
     }
     
