--- a/style/_main.scss
+++ b/style/_main.scss
@@ -103,5 +103,45 @@
             }                        
         }
     }
-    
+
+    .section-5 {
+        height: 400px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h3 {
+            //margin-top: 200px;
+            font-size: 38px;
+            font-family: 'IBM Plex Sans', sans-serif;
+            color: $text-color-1;
+        }
+
+        .btn {
+            height: 48px;
+            width: 300px;
+            margin-top: 2rem;
+            background: $btn-color-normal;
+            display: flex;
+            justify-content: center;
+            align-items: center;            
+            &:hover {
+                background: $btn-color-hover;
+                line-height: 24px;
+                a {
+                    color: $text-color-2;                    
+                }
+            }
+            a {
+                color: $text-color-1;
+                text-decoration: none;
+                font-family: 'IBM Plex Mono', monospace;
+                font-size: 14px;
+                font-weight: bold;
+                text-align: center;
+                
+            }
+        }
+    }
 }
