--- a/style/style.css
+++ b/style/style.css
@@ -343,4 +343,62 @@
   font-weight: bold;
   font-size: 1rem;
 }
+
+.main .section-5 {
+  height: 400px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .section-5 h3 {
+  font-size: 38px;
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: #060A24;
+}
+
+.main .section-5 .btn {
+  height: 48px;
+  width: 300px;
+  margin-top: 2rem;
+  background: #00F3BB;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .section-5 .btn:hover {
+  background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+  line-height: 24px;
+}
+
+.main .section-5 .btn:hover a {
+  color: #FFFFFF;
+}
+
+.main .section-5 .btn a {
+  color: #060A24;
+  text-decoration: none;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
