aplicados estilos de colores de fondo

--- a/style/style.css
+++ b/style/style.css
@@ -7,14 +7,19 @@
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1440px;
+  margin: auto;
+}
+
 .header {
   width: 100%;
-  height: 80px;
+  height: 65px;
   background: #FFFFFF;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  padding: 1.375rem 6.25rem;
+  padding: 18px 40px;
 }
 
 .header img {
@@ -58,9 +63,10 @@
   display: block;
   width: 40px;
   height: 32px;
-  opacity: 0;
+  opacity: 1;
   z-index: 2;
   position: absolute;
+  right: 20px;
   /*animación del menu que se desplega*/
   /*movimiento a cruz*/
 }
@@ -97,6 +103,7 @@
   height: 0.1563rem;
   margin-bottom: 0.4063rem;
   position: relative;
+  right: 2px;
   background: #060A24;
   z-index: 1;
   -webkit-transform-origin: 0.1875rem 0rem;
@@ -115,36 +122,6 @@
 .header .nav .menu span:nth-last-child(2) {
   -webkit-transform-origin: 0% 100%;
           transform-origin: 0% 100%;
-}
-
-@media screen and (min-width: 764px) {
-  .header .nav .menu ul {
-    position: relative;
-    top: 0;
-    right: 0;
-    overflow: hidden;
-    background: unset;
-    height: unset;
-  }
-  .header .nav .menu ul li {
-    padding: 0.3125rem 0.625rem;
-    display: inline-block;
-  }
-  .header .nav .menu ul li a {
-    color: #060A24;
-    padding: unset;
-    line-height: unset;
-  }
-  .header .nav .menu ul li a:hover {
-    color: #00F3BB;
-    text-decoration: line-through;
-  }
-  .header .nav .menu span {
-    display: none;
-  }
-  .header .nav .menu input {
-    display: none;
-  }
 }
 
 .title {
@@ -215,190 +192,268 @@
   text-align: center;
 }
 
-.main .h3-section-1 {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 2.5rem;
-  color: #060A24;
-  margin-top: 6.25rem;
-  margin-bottom: 1rem;
-  margin-left: 6.25rem;
-}
-
 .main .section-1 {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
   justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main .section-1 .episode {
   overflow: hidden;
-  height: 13.125rem;
-  width: 25rem;
+  width: 90vh;
 }
 
 .main .section-1 .episode iframe {
   overflow: hidden;
 }
 
-.main .section-2 {
+.footer {
+  width: 100%;
+  height: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.main .section-2 img {
-  height: 600px;
-  width: auto;
-}
-
-.main .section-2 .text {
-  height: 200px;
-  width: 460px;
-}
-
-.main .section-2 .text .h3-section-2 {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.main .section-2 .text p {
-  line-height: 24px;
+.footer h3 {
+  margin-left: 36px;
   font-family: 'IBM Plex Mono', monospace;
-  margin-bottom: 1rem;
+  font-size: 12px;
 }
 
-.main .section-3 h3 {
-  font-family: 'IBM Plex Sans', sans-serif;
-  margin-left: 6.25rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-}
-
-.main .section-3 .galery-images {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-}
-
-.main .section-3 .galery-images img {
-  width: 100%;
-  height: auto;
-}
-
-.main .section-4 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.125rem;
-}
-
-.main .section-4 h3 {
-  font-family: 'IBM Plex Sans', sans-serif;
-  margin-left: 6.25rem;
-  margin-bottom: 3rem;
-  font-size: 28px;
-}
-
-.main .section-4 .images-section-4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-.main .section-4 .images-section-4 .img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.main .section-4 .images-section-4 .img img {
-  height: 80px;
-  width: 80px;
-}
-
-.main .section-4 .images-section-4 .img p {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-weight: bold;
-  font-size: 1rem;
-}
-
-.main .section-5 {
-  height: 400px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.main .section-5 h3 {
-  font-size: 38px;
-  font-family: 'IBM Plex Sans', sans-serif;
-  color: #060A24;
-}
-
-.main .section-5 .btn {
-  height: 48px;
-  width: 300px;
-  margin-top: 2rem;
-  background: #00F3BB;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.main .section-5 .btn:hover {
-  background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
-  line-height: 24px;
-}
-
-.main .section-5 .btn:hover a {
-  color: #FFFFFF;
-}
-
-.main .section-5 .btn a {
-  color: #060A24;
+.footer .icons a {
+  margin-right: 30px;
   text-decoration: none;
-  font-family: 'IBM Plex Mono', monospace;
-  font-size: 14px;
   font-weight: bold;
-  text-align: center;
+  color: #060A24;
+}
+
+.footer .icons a:hover {
+  color: #0000EC;
+}
+
+@media screen and (min-width: 768px) {
+  .header .nav .menu ul {
+    position: relative;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    background: unset;
+    height: unset;
+  }
+  .header .nav .menu ul li {
+    padding: 0.3125rem 0.625rem;
+    display: inline-block;
+  }
+  .header .nav .menu ul li a {
+    color: #060A24;
+    padding: unset;
+    line-height: unset;
+  }
+  .header .nav .menu ul li a:hover {
+    color: #00F3BB;
+    text-decoration: line-through;
+  }
+  .header .nav .menu span {
+    display: none;
+  }
+  .header .nav .menu input {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .section-1 {
+    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+    -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+            clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 50px 50px;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: start;
+    padding-bottom: 50px;
+  }
+  .main .section-1 .h3-section-1 {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: -1;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 2.5rem;
+    color: #FFFFFF;
+    padding-top: 6.25rem;
+    margin-bottom: 1rem;
+    margin-left: 6.25rem;
+  }
+  .main .section-1 .episode {
+    overflow: hidden;
+    height: 13.125rem;
+    width: 25rem;
+  }
+  .main .section-1 .episode iframe {
+    overflow: hidden;
+  }
+  .main .section-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main .section-2 img {
+    height: 500px;
+    width: auto;
+    -webkit-transform: translate(0, -100px);
+            transform: translate(0, -100px);
+  }
+  .main .section-2 .text {
+    height: 200px;
+    width: 460px;
+  }
+  .main .section-2 .text .h3-section-2 {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  .main .section-2 .text p {
+    line-height: 24px;
+    font-family: 'IBM Plex Mono', monospace;
+    margin-bottom: 1rem;
+  }
+  .main .section-3 h3 {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: -1;
+    font-family: 'IBM Plex Sans', sans-serif;
+    margin-left: 6.25rem;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+  }
+  .main .section-3 .galery-images {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
+  }
+  .main .section-3 .galery-images img {
+    width: 100%;
+    height: auto;
+  }
+  .main .section-4 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.125rem;
+  }
+  .main .section-4 h3 {
+    font-family: 'IBM Plex Sans', sans-serif;
+    margin-left: 6.25rem;
+    margin-bottom: 3rem;
+    font-size: 28px;
+  }
+  .main .section-4 .images-section-4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .main .section-4 .images-section-4 .img {
+    margin-left: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .section-4 .images-section-4 .img img {
+    height: 50px;
+    width: 50px;
+  }
+  .main .section-4 .images-section-4 .img p {
+    width: 100px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
+  }
+  .main .section-5 {
+    height: 400px;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .section-5 h3 {
+    font-size: 38px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #060A24;
+  }
+  .main .section-5 .btn {
+    height: 48px;
+    width: 300px;
+    margin-top: 2rem;
+    background: #00F3BB;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .section-5 .btn:hover {
+    background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    line-height: 24px;
+  }
+  .main .section-5 .btn:hover a {
+    color: #FFFFFF;
+  }
+  .main .section-5 .btn a {
+    color: #060A24;
+    text-decoration: none;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
