--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,8 @@
 @import '_baserules';
 @import 'variables';
 @import 'header';
-@import 'mediaquery_header';
 @import 'title';
 @import 'main';
+@import 'footer';
+@import 'mediaquery_header';
+@import 'mediaquery_main';
