--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,10 +1,10 @@
 .header {
     width: 100%;
-    height: 80px;
+    height: 65px;
     background: $text-color-2;
     position: sticky;
     top: 0;
-    padding: 1.375rem 6.25rem;
+    padding: 18px 40px;
 
     img {
         float: left;
@@ -62,9 +62,10 @@
                 display: block;
                 width: 40px;
                 height: 32px;
-                opacity: 0;
+                opacity: 1;
                 z-index: 2;
                 position: absolute;
+                right: 20px;
                 /*animación del menu que se desplega*/
                 &[type="checkbox"]:checked ~ ul {
                     height: 14rem;
@@ -102,6 +103,7 @@
                 height: 0.1563rem;
                 margin-bottom: 0.4063rem;
                 position: relative;
+                right: 2px;
                 background: $text-color-1;
                 z-index: 1;
                 transform-origin: 0.1875rem 0rem;
