--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,146 +1,18 @@
 .main {
-    .h3-section-1 {
-        font-family: 'IBM Plex Sans', sans-serif;
-        font-size: 2.5rem;
-        color: $text-color-1;
-        margin-top: 6.25rem;
-        margin-bottom: 1rem;
-        margin-left: 6.25rem;
-    }
-    .section-1 {        
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;        
-        justify-items: center;
-        //padding-top: 150px;
-        
-
-        .episode {            
-            overflow: hidden;
-            height: 13.125rem;
-            width: 25rem;
-            iframe {
-                
-                overflow: hidden;
-            }
-        }
-    }
     
-    .section-2 {
-        display: flex;
-        align-content: center;
+    .section-1 {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;        
+        justify-items: center;
         align-items: center;
-        
-        img {
-            height: 600px;
-            width: auto;
-        }
 
-        .text {
-            height: 200px;
-            width: 460px;
-            .h3-section-2 {
-                font-family: 'IBM Plex Sans', sans-serif;
-                font-size: 2.5rem;
-                margin-bottom: 1rem;
-            }
-            
-            p {
-                line-height: 24px;
-                font-family: 'IBM Plex Mono', monospace;
-                margin-bottom: 1rem;
-            }
-        }        
-    }
-
-    .section-3 {
-        h3 {
-            font-family: 'IBM Plex Sans', sans-serif;
-            margin-left: 6.25rem;
-            margin-bottom: 1rem;
-            font-size: 2rem;
-        }
-        .galery-images {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr;            
-            
-            img {
-                width: 100%;
-                height: auto;
-            }            
-        }        
-    }
-
-    .section-4 {
-        margin-top: 2.5rem;
-        margin-bottom: 2.125rem;
-        h3 {
-            font-family: 'IBM Plex Sans', sans-serif;
-            margin-left: 6.25rem;
-            margin-bottom: 3rem;
-            font-size: 28px;
-        }
-        .images-section-4 {
-            display: flex;
-            justify-content: space-around;            
-            align-content: center;
-            
-            .img {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                img {
-                    height: 80px;
-                    width: 80px;
-                }
-                p {
-                    font-family: 'IBM Plex Sans', sans-serif;
-                    font-weight: bold;
-                    font-size: 1rem;
-                    
-                }
-            }                        
-        }
-    }
-
-    .section-5 {
-        height: 400px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        h3 {
-            //margin-top: 200px;
-            font-size: 38px;
-            font-family: 'IBM Plex Sans', sans-serif;
-            color: $text-color-1;
-        }
-
-        .btn {
-            height: 48px;
-            width: 300px;
-            margin-top: 2rem;
-            background: $btn-color-normal;
-            display: flex;
-            justify-content: center;
-            align-items: center;            
-            &:hover {
-                background: $btn-color-hover;
-                line-height: 24px;
-                a {
-                    color: $text-color-2;                    
-                }
-            }
-            a {
-                color: $text-color-1;
-                text-decoration: none;
-                font-family: 'IBM Plex Mono', monospace;
-                font-size: 14px;
-                font-weight: bold;
-                text-align: center;
-                
+        .episode {
+            overflow: hidden;
+            //height: 20vh;
+            width: 90vh;
+            iframe {                    
+                overflow: hidden;
             }
         }
     }
