--- a/style/_header.scss
+++ b/style/_header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 65px;
     background: $text-color-2;
-    position: sticky;
+    position: relative;
     top: 0;
     padding: 18px 40px;
 
