--- a/style/_mediaquery_main.scss
+++ b/style/_mediaquery_main.scss
@@ -2,14 +2,15 @@
     .main {
         .section-1 {
         background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-        clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);     
+        clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);     
         display: grid;
-        grid-gap: 50px 50px;
+        grid-gap: 40px 50px;
         grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
+        grid-template-rows: 100px 232px 232px;
         justify-content: center;
         justify-items: start;
-        padding-bottom: 50px;
+        padding-bottom: 150px;
+        padding-top: 70px;
 
             .h3-section-1 {
                 grid-column-start: 1;
@@ -17,19 +18,15 @@
                 font-family: 'IBM Plex Sans', sans-serif;
                 font-size: 2.5rem;
                 color: $text-color-2;
-                padding-top: 6.25rem;
+                padding-top: 8rem;
                 margin-bottom: 1rem;
                 margin-left: 6.25rem;
             }
         
-            .episode {            
+            iframe {            
                 overflow: hidden;
-                height: 13.125rem;
-                width: 25rem;
-                
-                iframe {                    
-                    overflow: hidden;
-                }
+                height: 232px;
+                width: 400px;
             }
         }
 
@@ -41,7 +38,7 @@
             img {
                 height: 500px;
                 width: auto;
-                transform: translate(0, -100px);
+                transform: translate(0, -90px);
                 
             }
             
@@ -84,7 +81,7 @@
         
         .section-4 {
             margin-top: 2.5rem;
-            margin-bottom: 2.125rem;
+            margin-bottom: 1.125rem;
             h3 {
                 font-family: 'IBM Plex Sans', sans-serif;
                 margin-left: 6.25rem;
@@ -117,6 +114,8 @@
         }
         
         .section-5 {
+            background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+            clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
             height: 400px;
             width: 100%;
             display: flex;
@@ -127,7 +126,7 @@
                 //margin-top: 200px;
                 font-size: 38px;
                 font-family: 'IBM Plex Sans', sans-serif;
-                color: $text-color-1;
+                color: $text-color-2;
             }
         
             .btn {
