--- a/style/style.css
+++ b/style/style.css
@@ -16,8 +16,7 @@
   width: 100%;
   height: 65px;
   background: #FFFFFF;
-  position: -webkit-sticky;
-  position: sticky;
+  position: relative;
   top: 0;
   padding: 18px 40px;
 }
@@ -278,20 +277,21 @@
 @media screen and (min-width: 768px) {
   .main .section-1 {
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-    -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
-            clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+    -webkit-clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
+            clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
     display: -ms-grid;
     display: grid;
-    grid-gap: 50px 50px;
+    grid-gap: 40px 50px;
     -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
-    -ms-grid-rows: auto auto;
-        grid-template-rows: auto auto;
+    -ms-grid-rows: 100px 232px 232px;
+        grid-template-rows: 100px 232px 232px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     justify-items: start;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
+    padding-top: 70px;
   }
   .main .section-1 .h3-section-1 {
     -ms-grid-column: 1;
@@ -300,17 +300,14 @@
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 2.5rem;
     color: #FFFFFF;
-    padding-top: 6.25rem;
+    padding-top: 8rem;
     margin-bottom: 1rem;
     margin-left: 6.25rem;
   }
-  .main .section-1 .episode {
+  .main .section-1 iframe {
     overflow: hidden;
-    height: 13.125rem;
-    width: 25rem;
-  }
-  .main .section-1 .episode iframe {
-    overflow: hidden;
+    height: 232px;
+    width: 400px;
   }
   .main .section-2 {
     display: -webkit-box;
@@ -323,8 +320,8 @@
   .main .section-2 img {
     height: 500px;
     width: auto;
-    -webkit-transform: translate(0, -100px);
-            transform: translate(0, -100px);
+    -webkit-transform: translate(0, -90px);
+            transform: translate(0, -90px);
   }
   .main .section-2 .text {
     height: 200px;
@@ -361,7 +358,7 @@
   }
   .main .section-4 {
     margin-top: 2.5rem;
-    margin-bottom: 2.125rem;
+    margin-bottom: 1.125rem;
   }
   .main .section-4 h3 {
     font-family: 'IBM Plex Sans', sans-serif;
@@ -404,6 +401,9 @@
     text-align: center;
   }
   .main .section-5 {
+    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+    -webkit-clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
     height: 400px;
     width: 100%;
     display: -webkit-box;
@@ -423,7 +423,7 @@
   .main .section-5 h3 {
     font-size: 38px;
     font-family: 'IBM Plex Sans', sans-serif;
-    color: #060A24;
+    color: #FFFFFF;
   }
   .main .section-5 .btn {
     height: 48px;
