definidos enlaces con saltos en el sitio

--- a/style/_mediaquery_main.scss
+++ b/style/_mediaquery_main.scss
@@ -9,8 +9,9 @@
         grid-template-rows: 100px 232px 232px;
         justify-content: center;
         justify-items: start;
-        padding-bottom: 150px;
-        padding-top: 70px;
+        //padding-bottom: 150px;
+        //padding-top: 70px;
+        padding: 70px 50px 150px 50px;
 
             .h3-section-1 {
                 grid-column-start: 1;
