--- a/style/style.scss
+++ b/style/style.scss
@@ -4,5 +4,4 @@
 @import 'title';
 @import 'main';
 @import 'footer';
-@import 'mediaquery_header';
-@import 'mediaquery_main';
+@import 'mediaquery';
