--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,18 +1,140 @@
+html {
+    //font-size: 10px;
+}
 .main {
     
     .section-1 {
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);     
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;        
-        justify-items: center;
+        grid-gap: 20px 0px;
+        grid-template-columns: 20rem;        
+        justify-content: center;
+        justify-items: start;
+
+        iframe {                    
+            overflow: hidden;
+            height: 14.5rem;
+            width: 300px;
+        }
+    }
+    .section-2 {            
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
 
-        .episode {
-            overflow: hidden;
-            //height: 20vh;
-            width: 90vh;
-            iframe {                    
-                overflow: hidden;
+        img {
+            height: auto;
+            width: 320px;
+            transform: translate(0, -5.625rem);
+            
+        }
+        .text {
+            //height: 200px;
+            //width: 460px;
+            .h3-section-2 {
+                font-family: 'IBM Plex Sans', sans-serif;
+                font-size: 2.5rem;
+                margin-bottom: 1rem;
+            }
+            
+            p {
+                line-height: 24px;
+                font-family: 'IBM Plex Mono', monospace;
+                margin-bottom: 1rem;
+            }
+        }
+    }
+
+    .section-3 {        
+        h3 {
+            font-family: 'IBM Plex Sans', sans-serif;
+            margin-left: 1rem;
+            margin-bottom: 1rem;
+            font-size: 2rem;
+        }
+        .galery-images {
+            display: grid;
+            grid-template-columns: auto;
+            justify-content: center;
+            align-items: center;
+            
+            img {
+                width: 100%;
+                height: auto;
+            }            
+        }        
+    }
+
+    .section-4 {
+        h3 {
+            font-family: 'IBM Plex Sans', sans-serif;
+            //margin-left: 6.25rem;
+            margin: 3rem 1rem;
+            font-size: 1.75rem;            
+        }
+
+        .images-section-4 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;            
+            align-content: center;
+                
+            .img {                
+                display: flex;
+                flex-direction: column;                
+                align-items: center;
+                align-content: space-between;
+                img {
+                    height: 3.125rem;
+                    width: 3.125rem;
+                }
+                p {
+                    width: 6.25rem;
+                    font-family: 'IBM Plex Sans', sans-serif;
+                    font-weight: bold;
+                    font-size: 0.875rem;
+                    text-align: center;
+                    margin-bottom: 2rem;
+                }
+            }                        
+        }
+
+    }
+
+    .section-5 {
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+        height: 25rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h3 {
+            text-align: center;
+            font-size: 2rem;
+            font-family: 'IBM Plex Sans', sans-serif;
+            color: $text-color-2;
+        }
+    
+        .btn {
+            height: 48px;
+            width: 300px;
+            margin-top: 2rem;
+            background: $btn-color-normal;
+            display: flex;
+            justify-content: center;
+            align-items: center;            
+                    
+            a {
+                color: $text-color-1;
+                text-decoration: none;
+                font-family: 'IBM Plex Mono', monospace;
+                font-size: 14px;
+                font-weight: bold;
+                text-align: center;                
             }
         }
     }
