--- a/style/_title.scss
+++ b/style/_title.scss
@@ -3,11 +3,12 @@
     flex-direction: column;
     background: $text-color-2;
     color: $text-color-1;
-    margin-top: 5rem;
+    margin-top: 1rem;
+    width: 100%;
     h1 {
         font-size: 2.75rem;
         font-family: 'IBM Plex Sans', sans-serif;
-        margin-left: 6.25rem;
+        margin-left: 2rem;
         .color {
             color: $color-menu-h
         }
@@ -18,7 +19,7 @@
     p {
         font-size: 1rem;
         font-family: 'IBM Plex Mono', monospace;
-        margin-left: 6.25rem;
+        margin-left: 2rem;
     }
 
     .btn {
