--- a/style/style.css
+++ b/style/style.css
@@ -133,13 +133,14 @@
           flex-direction: column;
   background: #FFFFFF;
   color: #060A24;
-  margin-top: 5rem;
+  margin-top: 1rem;
+  width: 100%;
 }
 
 .title h1 {
   font-size: 2.75rem;
   font-family: 'IBM Plex Sans', sans-serif;
-  margin-left: 6.25rem;
+  margin-left: 2rem;
 }
 
 .title h1 .color {
@@ -153,7 +154,7 @@
 .title p {
   font-size: 1rem;
   font-family: 'IBM Plex Mono', monospace;
-  margin-left: 6.25rem;
+  margin-left: 2rem;
 }
 
 .title .btn {
@@ -192,56 +193,221 @@
 }
 
 .main .section-1 {
+  background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+  -webkit-clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
+          clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-  justify-items: center;
+  grid-gap: 20px 0px;
+  -ms-grid-columns: 20rem;
+      grid-template-columns: 20rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: start;
+}
+
+.main .section-1 iframe {
+  overflow: hidden;
+  height: 14.5rem;
+  width: 300px;
+}
+
+.main .section-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.main .section-1 .episode {
-  overflow: hidden;
-  width: 90vh;
+.main .section-2 img {
+  height: auto;
+  width: 320px;
+  -webkit-transform: translate(0, -5.625rem);
+          transform: translate(0, -5.625rem);
 }
 
-.main .section-1 .episode iframe {
-  overflow: hidden;
+.main .section-2 .text .h3-section-2 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.main .section-2 .text p {
+  line-height: 24px;
+  font-family: 'IBM Plex Mono', monospace;
+  margin-bottom: 1rem;
+}
+
+.main .section-3 h3 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+.main .section-3 .galery-images {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .section-3 .galery-images img {
+  width: 100%;
+  height: auto;
+}
+
+.main .section-4 h3 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin: 3rem 1rem;
+  font-size: 1.75rem;
+}
+
+.main .section-4 .images-section-4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.main .section-4 .images-section-4 .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+}
+
+.main .section-4 .images-section-4 .img img {
+  height: 3.125rem;
+  width: 3.125rem;
+}
+
+.main .section-4 .images-section-4 .img p {
+  width: 6.25rem;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: bold;
+  font-size: 0.875rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.main .section-5 {
+  background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+  -webkit-clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+  height: 25rem;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .section-5 h3 {
+  text-align: center;
+  font-size: 2rem;
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: #FFFFFF;
+}
+
+.main .section-5 .btn {
+  height: 48px;
+  width: 300px;
+  margin-top: 2rem;
+  background: #00F3BB;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .section-5 .btn a {
+  color: #060A24;
+  text-decoration: none;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .footer {
   width: 100%;
-  height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  height: 5.625rem;
+  padding: 1rem 0;
 }
 
 .footer h3 {
-  margin-left: 36px;
+  text-align: center;
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 12px;
+  font-size: 0.9375rem;
+  margin-bottom: 0.8rem;
+}
+
+.footer .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .footer .icons a {
-  margin-right: 30px;
   text-decoration: none;
   font-weight: bold;
   color: #060A24;
 }
 
-.footer .icons a:hover {
-  color: #0000EC;
+@media screen and (min-width: 321px) {
+  .title {
+    background: red;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -272,13 +438,7 @@
   .header .nav .menu input {
     display: none;
   }
-}
-
-@media screen and (min-width: 768px) {
   .main .section-1 {
-    background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-    -webkit-clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
-            clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);
     display: -ms-grid;
     display: grid;
     grid-gap: 40px 50px;
@@ -286,10 +446,6 @@
         grid-template-columns: auto auto;
     -ms-grid-rows: 100px 232px 232px;
         grid-template-rows: 100px 232px 232px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: start;
     padding: 70px 50px 150px 50px;
   }
   .main .section-1 .h3-section-1 {
@@ -305,8 +461,8 @@
   }
   .main .section-1 iframe {
     overflow: hidden;
-    height: 232px;
-    width: 400px;
+    height: 14.5rem;
+    width: 25rem;
   }
   .main .section-2 {
     display: -webkit-box;
@@ -363,7 +519,7 @@
     font-family: 'IBM Plex Sans', sans-serif;
     margin-left: 6.25rem;
     margin-bottom: 3rem;
-    font-size: 28px;
+    font-size: 1.75rem;
   }
   .main .section-4 .images-section-4 {
     display: -webkit-box;
