--- a/style/_header.scss
+++ b/style/_header.scss
@@ -2,14 +2,15 @@
     width: 100%;
     height: 65px;
     background: $text-color-2;
-    position: relative;
+    position: sticky;
     top: 0;
-    padding: 18px 40px;
+    padding: 1.125rem 1.25rem;
+    z-index: 10;
 
     img {
         float: left;
         width: 1.5rem;
-        height: 1.5rem;
+        height: 1.5rem;        
     }
     
     .nav {
@@ -45,8 +46,8 @@
                         text-decoration: none;
                         color: $text-color-2;
                         font-family: 'IBM Plex Mono', monospace;
-                        padding: 1rem 5%;
-                        line-height: 28px;
+                        padding: 1.5rem 1rem 0 5%;
+                        line-height: 1.75rem;
                         display: block;
                     }
                 }
@@ -62,13 +63,14 @@
                 display: block;
                 width: 40px;
                 height: 32px;
-                opacity: 1;
+                opacity: 0;
                 z-index: 2;
                 position: absolute;
-                right: 20px;
+                right: 1rem;
                 /*animación del menu que se desplega*/
                 &[type="checkbox"]:checked ~ ul {
-                    height: 14rem;
+                    height: 240px;
+                    z-index: -1;
                     transition: height 0.5s ease-in-out;
                     -moz-transition: height 0.5s ease-in-out;
                     -o-transition: height 0.5s ease-in-out;
@@ -103,7 +105,7 @@
                 height: 0.1563rem;
                 margin-bottom: 0.4063rem;
                 position: relative;
-                right: 2px;
+                right: 1px;
                 background: $text-color-1;
                 z-index: 1;
                 transform-origin: 0.1875rem 0rem;
