--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,21 +1,27 @@
-html {
-    //font-size: 10px;
-}
-.main {
-    
+.main {    
     .section-1 {
         background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-        clip-path: polygon(0 12%, 100% 0, 100% 85%, 0 100%);     
+        clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%);     
         display: grid;
-        grid-gap: 20px 0px;
-        grid-template-columns: 20rem;        
-        justify-content: center;
-        justify-items: start;
+        grid-gap: 0.625rem 0;
+        grid-template-columns: auto;
+        justify-content: center;        
+        padding: 9rem 0;
+
+        .h3-section-1 {
+            font-size: 2.5rem;
+            font-family: 'IBM Plex Sans', sans-serif;
+            color: $text-color-2;
+            line-height: 0.5rem;
+            text-align: start;
+            margin-bottom: 1.5rem;
+        }
 
         iframe {                    
             overflow: hidden;
-            height: 14.5rem;
-            width: 300px;
+            height: 225px;
+            width: 298px;
+
         }
     }
     .section-2 {            
@@ -31,8 +37,7 @@ html {
             
         }
         .text {
-            //height: 200px;
-            //width: 460px;
+            padding: 0 1rem;
             .h3-section-2 {
                 font-family: 'IBM Plex Sans', sans-serif;
                 font-size: 2.5rem;
@@ -40,7 +45,7 @@ html {
             }
             
             p {
-                line-height: 24px;
+                line-height: 1.5rem;
                 font-family: 'IBM Plex Mono', monospace;
                 margin-bottom: 1rem;
             }
@@ -49,9 +54,8 @@ html {
 
     .section-3 {        
         h3 {
-            font-family: 'IBM Plex Sans', sans-serif;
-            margin-left: 1rem;
-            margin-bottom: 1rem;
+            font-family: 'IBM Plex Sans', sans-serif;            
+            margin: 2.5rem 1rem 1rem 1rem;
             font-size: 2rem;
         }
         .galery-images {
@@ -87,14 +91,14 @@ html {
                 align-items: center;
                 align-content: space-between;
                 img {
-                    height: 3.125rem;
-                    width: 3.125rem;
+                    height: 5rem;
+                    width: 5rem;
                 }
                 p {
-                    width: 6.25rem;
+                    width: 10.625rem;
                     font-family: 'IBM Plex Sans', sans-serif;
                     font-weight: bold;
-                    font-size: 0.875rem;
+                    font-size: 1rem;
                     text-align: center;
                     margin-bottom: 2rem;
                 }
@@ -120,8 +124,8 @@ html {
         }
     
         .btn {
-            height: 48px;
-            width: 300px;
+            height: 3rem;
+            width: 18rem;
             margin-top: 2rem;
             background: $btn-color-normal;
             display: flex;
