--- a/style/_title.scss
+++ b/style/_title.scss
@@ -1,6 +1,8 @@
 .title {    
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: $text-color-2;
     color: $text-color-1;
     margin-top: 1rem;
@@ -8,7 +10,7 @@
     h1 {
         font-size: 2.75rem;
         font-family: 'IBM Plex Sans', sans-serif;
-        margin-left: 2rem;
+        margin-left: 1rem;
         .color {
             color: $color-menu-h
         }
@@ -16,22 +18,23 @@
             text-decoration: line-through;
         }
     }
-    p {
-        font-size: 1rem;
+    .desktop {
+        display: none;
+    }
+    .mobile {
+        font-size: 0.875rem;
         font-family: 'IBM Plex Mono', monospace;
-        margin-left: 2rem;
+        margin: 2rem 1rem;
     }
 
     .btn {
-        height: 3.5rem;
-        width: 14.125rem;
+        height: 3rem;
+        width: 17.5rem;
         background: $btn-color-normal;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 6.25rem;
-        margin-top: 56px;
-        margin-bottom: 5px;
+        margin: 2rem 1rem;        
         &:hover {
             background: $btn-color-hover;
             line-height: 24px;
